EssentialsLevel1/Source-Code/Demo/Azure IasC/AFW-IasC/AFW-IasC/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "networkSecurityGroups_AFW_Demo_NSG_name": {
        "defaultValue": "AFW-Demo-NSG2",
        "type": "String"
      }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-06-01",
            "name": "[parameters('networkSecurityGroups_AFW_Demo_NSG_name')]",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "AFW-Demo-Port80",
                        "etag": "W/\"60140817-5975-4501-9a82-ed7d8585145e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow Port 80",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-06-01",
            "name": "[concat(parameters('networkSecurityGroups_AFW_Demo_NSG_name'), '/AFW-Demo-Port80')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_AFW_Demo_NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow Port 80",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        }
    ]
}
